[package]
name = "melnet2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
async-trait = "0.1.57"
concurrent-queue = "1.2.4"
dashmap = "5.4.0"
fastrand = "1.8.0"
futures-util = "0.3.23"
itertools = "0.10.3"
log = "0.4.17"
lz4_flex = "0.9.4"
moka = "0.9.3"
nanorpc = "0.1.3"
pin-project = "1.0.12"
reusable-box-future = "0.2.0"
serde = {version="1.0.144", features=["derive"]}
serde_json = "1.0.83"
smol = "1.2.5"
smol-timeout = "0.6.0"
smol_str = "0.1.23"
smolscale = "0.3.29"
thiserror = "1.0.32"
