[package]
name = "melnet2"
version = "0.2.1"
edition = "2021"

description = "JSON-RPC/nanorpc-based, low-level auto-peering RPC protocol used throughout Themelio for peer-to-peer communciations"
license = "ISC"
repository = "https://github.com/themeliolabs/melnet2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
concurrent-queue = "1.2.4"
dashmap = "5.4.0"
fastrand = "1.8.0"
futures-util = "0.3.25"
itertools = "0.10.5"
log = "0.4.17"
lz4_flex = "0.9.5"
moka = "0.9.6"
nanorpc = "0.1.12"
pin-project = "1.0.12"
reusable-box-future = "0.2.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
smol = "1.2.5"
smol-timeout = "0.6.0"
smol_str = "0.1.23"
smolscale = "0.3.49"
thiserror = "1.0.37"

[dev-dependencies]
env_logger= "0.8.4"
