[package]
name = "melnet2"
version = "0.3.1"
edition = "2021"
description = "JSON-RPC/nanorpc-based, low-level auto-peering RPC protocol used throughout Themelio for peer-to-peer communciations"
license = "ISC"
repository = "https://github.com/themeliolabs/melnet2"

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
dashmap = "5.5.3"
fastrand = "2.1.0"
futures-util = "0.3.30"
itertools = "0.13.0"
log = "0.4.21"
moka = { version = "0.12.7", features = ["sync"] }
nanorpc = "0.1.12"
nanorpc-http = "0.1.3"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
smol = "2.0.0"
smol-timeout = "0.6.0"
smol_str = { version = "0.2.2", features = ["serde"] }
smolscale = "0.4.4"
thiserror = "1.0.60"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
